# fractal

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  README.md  fractal.doap  meson.build  meson_options.txt
build-aux/: cargo.sh  org.gnome.FractalNext.Devel.json
data/: org.gnome.FractalNext.gschema.xml.in
data/resources/: resources.gresource.xml  style-dark.css  style.css
data/resources/ui/: account-settings-device-row.ui  account-settings-devices-page.ui  account-settings.ui  add-account-row.ui  avatar-with-selection.ui  components-auth-dialog.ui  components-avatar.ui  components-loading-listbox-row.ui  components-reaction-chooser.ui  components-video-player.ui  content-divider-row.ui  content-explore-item.ui  content-explore.ui  content-invite-subpage.ui  content-invite.ui  content-invitee-item.ui  content-invitee-row.ui  content-item-row-menu.ui  content-item.ui  content-markdown-popover.ui  content-member-item.ui  content-member-page.ui  content-member-row.ui  content-message-file.ui  content-message-media.ui  content-message-reaction-list.ui  content-message-reaction.ui  content-message-reply.ui  content-message-row.ui  content-public-room-row.ui  content-room-details.ui  content-room-history.ui  content-state-creation.ui  content-state-row.ui  content-state-tombstone.ui  content-verification-info-bar.ui  content.ui  context-menu-bin.ui  event-menu.ui  event-source-dialog.ui  (+29 more)
flatpak/: org.gnome.Fractal-release.json  org.gnome.Fractal.json
fractal-gtk/: Cargo.toml
fractal-gtk/po/: LINGUAS  ca.po  cs.po  eu.po  fa.po  fr.po  fy.po  gl.po  he.po  hr.po  nl.po  oc.po  pt_BR.po  ro.po  ru.po  sl.po  sr@latin.po  zh_CN.po
fractal-gtk/res/: meson.build  org.gnome.Fractal.metainfo.xml.in.in
fractal-gtk/src/: client.rs  main.rs
fractal-gtk/src/appop/: member.rs  message.rs  room.rs
fractal-gtk/src/backend/: directory.rs  media.rs  mod.rs  room.rs  sync.rs  user.rs
fractal-gtk/src/model/: fileinfo.rs  member.rs  message.rs  room.rs
fractal-gtk/src/ui/: account.rs
fractal-gtk/src/ui/connect/: join_room.rs  new_room.rs
fractal-gtk/src/util/: mod.rs
fractal-gtk/src/widgets/: image.rs  inline_player.rs  media_viewer.rs  message.rs  roomlist.rs  roomrow.rs
hooks/: pre-commit.hook
po/: POTFILES.in
scripts/: checks.sh
src/: application.rs  error.rs  greeter.rs  login.rs  login_advanced_dialog.rs  main.rs  matrix_error.rs  meson.build  prelude.rs  secret.rs  user_facing_error.rs  utils.rs  window.rs
src/components/: auth_dialog.rs  avatar.rs  badge.rs  context_menu_bin.rs  custom_entry.rs  in_app_notification.rs  label_with_widgets.rs  loading_listbox_row.rs  mod.rs  pill.rs  reaction_chooser.rs  room_title.rs  spinner_button.rs  user_pill.rs  video_player.rs  video_player_renderer.rs
src/contrib/: mod.rs  qr_code.rs
src/contrib/qr_code_scanner/: camera.rs  camera_paintable.rs  mod.rs  qr_code_detector.rs  screenshot.rs
src/session/: avatar.rs  content.rs  event_source_dialog.rs  media_viewer.rs  mod.rs  room_list.rs  sidebar.rs  supervisor.rs  user.rs
src/session/account_settings/: mod.rs
src/session/account_settings/devices_page/: device.rs  device_item.rs  device_list.rs  device_row.rs  mod.rs
src/session/categories/: categories.rs  category.rs  category_type.rs  mod.rs  room_list.rs
src/session/content/: content.rs  content_type.rs  invite.rs  item_row.rs  markdown_popover.rs  message_row.rs  mod.rs  room_history.rs  state_row.rs
src/session/content/explore/: explore.rs  mod.rs  public_room.rs  public_room_list.rs  public_room_row.rs
src/session/content/message_row/: file.rs  image.rs  mod.rs  text.rs
src/session/content/room_details/: member_page.rs  mod.rs  room_details.rs
src/session/content/room_details/invite_subpage/: invitee.rs  invitee_list.rs  invitee_row.rs  mod.rs
src/session/content/room_details/member_page/: member_menu.rs  member_row.rs  mod.rs
src/session/content/room_history/: divider_row.rs  item_row.rs  mod.rs  state_row.rs  verification_info_bar.rs
src/session/content/room_history/message_row/: file.rs  image.rs  media.rs  mod.rs  reaction.rs  reaction_list.rs  reply.rs  text.rs  video.rs
src/session/content/room_history/state_row/: creation.rs  mod.rs  tombstone.rs
src/session/content/verification/: emoji.rs  identity_verification_widget.rs  mod.rs  session_verification.rs
src/session/room/: event.rs  event_actions.rs  highlight_flags.rs  item.rs  member.rs  member_list.rs  member_role.rs  mod.rs  power_levels.rs  reaction_group.rs  reaction_list.rs  room.rs  room_type.rs  timeline.rs
src/session/room_creation/: mod.rs
src/session/sidebar/: categories.rs  category.rs  category_list.rs  category_row.rs  category_type.rs  entry.rs  entry_row.rs  entry_type.rs  item_list.rs  mod.rs  room.rs  room_row.rs  row.rs  selection.rs  sidebar.rs  verification_row.rs
src/session/sidebar/account_switcher/: add_account.rs  avatar_with_selection.rs  item.rs  mod.rs  user_entry.rs
src/session/verification/: emoji.rs  identity_verification.rs  incoming_verification.rs  mod.rs  session_verification.rs  to_device_handler.rs  verification_list.rs
subprojects/: gtksourceview.wrap
