[package]
name = "fractal"
version = "0.1.0"
authors = ["Daniel García Moreno <danigm@wadobo.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3

[dependencies]
log = "0.4"
tracing-subscriber = "0.2"
gettext-rs = { version = "0.5", features = ["gettext-system"] }
gtk-macros = "0.2"
once_cell = "1.5"
serde_json = "1.0"
tokio = { version = "1.2", features = ["rt", "rt-multi-thread"] }
url = "2.2"
secret-service = "2.0"
html2pango = "0.4"
futures = "0.3"
comrak = "0.10"
rand = "0.8"
indexmap = "1.6.2"

[dependencies.sourceview]
branch = "main"
package = "sourceview5"
git = "https://gitlab.gnome.org/World/Rust/sourceview5-rs.git"

[dependencies.gtk]
package = "gtk4"
git = "https://github.com/gtk-rs/gtk4-rs"

[dependencies.glib]
git = "https://github.com/gtk-rs/gtk-rs"

[dependencies.adw]
package = "libadwaita"
git = "https://gitlab.gnome.org/bilelmoussaoui/libadwaita-rs.git"

[dependencies.matrix-sdk]
git = "https://github.com/matrix-org/matrix-rust-sdk.git"
features = ["socks", "encryption", "sled_cryptostore", "sled_state_store"]
