[package]
name = "fractal"
version = "0.1.0"
authors = ["Daniel García Moreno <danigm@wadobo.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
log = "0.4"
mime = "0.3.16"
tracing-subscriber = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.5"
serde_json = "1.0"
tokio = { version = "1.2", features = ["rt", "rt-multi-thread"] }
url = "2.2"
secret-service = "2.0"
html2pango = "0.4"
futures = "0.3"
rand = "0.8"
indexmap = "1.6.2"

[dependencies.sourceview]
package = "sourceview5"
version = "0.3.0"

[dependencies.gtk]
package = "gtk4"
version = "0.3"

[dependencies.adw]
package = "libadwaita"
version = "0.1.0-alpha-6"

[dependencies.matrix-sdk]
git = "https://github.com/jsparber/matrix-rust-sdk.git"
branch = "messages-api"
features = ["socks", "encryption", "sled_cryptostore", "sled_state_store", "markdown"]
