[package]
name = "fractal"
version = "0.1.0"
authors = ["Daniel García Moreno <danigm@wadobo.com>"]
edition = "2018"

[profile.dev.package."*"]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 16

[dependencies]
log = "0.4"
mime = "0.3.16"
tracing-subscriber = "0.2"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-macros = "0.3"
once_cell = "1.5"
serde = "1.0.130"
serde_json = "1.0"
tokio = { version = "1.15", features = ["rt", "rt-multi-thread", "sync"] }
url = "2.2"
secret-service = "2.0"
html2pango = "0.4"
futures = "0.3"
rand = "0.8"
indexmap = "1.6.2"
qrcode = "0.12.0"
ashpd =  {git = "https://github.com/bilelmoussaoui/ashpd", rev="66d4dc0020181a7174451150ecc711344082b5ce", features=["feature_gtk4", "feature_pipewire", "log"]}
gst = {version = "0.17", package = "gstreamer"}
gst_base = {version = "0.17", package = "gstreamer-base"}
gst_video = {version = "0.17", package = "gstreamer-video"}
image = {version = "0.23", default-features = false, features=["png"]}
regex = "1.5.4"
mime_guess = "2.0.3"

[dependencies.sourceview]
package = "sourceview5"
version = "0.3.0"

[dependencies.gtk]
package = "gtk4"
version = "0.3"

[dependencies.adw]
package = "libadwaita"
version = "0.1.0-alpha-6"

[dependencies.matrix-sdk]
git = "https://github.com/jsparber/matrix-rust-sdk.git"
branch = "messages-api"
features = ["socks", "encryption", "sled_cryptostore", "sled_state_store", "markdown"]
