option(
  'profile',
  type: 'combo',
  choices: [
    'default',
    'development'
  ],
  value: 'default',
  description: 'The build profile for Fractal. One of "default" or "development".'
)
option(
  'skip-cargo-build', type: 'boolean', value: false,
  description: 'Skip building "cargo-build" target.'
)
